--- a/index.html
+++ b/index.html
@@ -336,6 +336,188 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
     </section>
 
 
+    <section class="section chapters" id="chapters">
+
+      <div class="container">
+
+        <p class="section-subtitle">
+          Chapters
+        </p>
+
+
+        <h2 class="h2 section-title has-underline">
+          New part of 'Dark Tower' contains these parts..
+        </h2>
+
+
+        <span class="span has-before">
+
+          <ul class="grid-list">
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 1
+                </p>
+
+                <h3 class="h3 card-title">
+                  The Little Red King
+                </h3>
+
+                <p class="card-text">
+                  While Susannah and Mia give birth to Mordred in Fedic, Jake, Father Callahan, and Oy battle vampires and low men in the Dixie Pig. They use Susannah's scrimshaw turtle to hypnotize the masses, which doesn't last long but is enough to give Jake and Oy a head start to the door in the basement. Callahan uses his cross and his gun to keep the vampires from Jake a little longer, then shoots himself as they overpower him. In the basement Jake switches minds with Oy to get past a mind trap guarding the door to Fedic.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 2
+                </p>
+
+                <h3 class="h3 card-title">
+                  Ka-Tet Broken
+                </h3>
+
+                <p class="card-text">
+                  In Algul Siento the ka-tet works with two renegade Breakers with connections to America: Ted Brautigan and Dinky Earnshaw. Roland also reunites with Sheemie from Mejis, who expresses his sorrow at Susan's death. The renegade Breakers and the ka-tet liberate the Breakers' compound by setting fires to create chaos and the illusion of many attackers. In the melee the Breakers' foreman Pimli Prentiss fatally wounds Eddie. Roland shoots Prentiss. Eddie survives for a short time after and warns them to watch out for Dandelo. In his last breath Eddie calls Roland "father." Susannah stays in Fedic to grieve and bury Eddie while Roland and Jake deduce where and when King is going to die. Sheemie uses his powers to teleport Jake, Roland, and Oy to Stoneham, Maine, on June 19, 1999.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 3
+                </p>
+
+                <h3 class="h3 card-title">
+                  Tet Corporation
+                </h3>
+
+                <p class="card-text">
+                  Following Eddie's advice to buy technology stocks—among other good investments—the Tet Corporation has thrived and continues to thwart the Crimson King's Sombra Corporation. The glass skyscraper on the former vacant lot houses a shrine to the rose safely ensconced in the lobby. Aaron Deepneau's niece and Moses Carver's daughter run the company, and Roland meets Moses, who gives him a watch engraved with a tower, a rose, and a key, as well as the silver cross from John Cullum, who was killed in a Sombra attack disguised as a mugging in 1989.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 4
+                </p>
+
+                <h3 class="h3 card-title">
+                  Le Casse Roi Russe and Dandelo
+                </h3>
+
+                <p class="card-text">
+                  To reach the badlands between Fedic and the Tower, Roland, Susannah, and Oy must travel through the bowels of Castle Discordia. A monster from the todash, the space between worlds, chases them through but they deter it by lighting bones on fire with a can of Sterno Susannah found in Fedic. The badlands are harsh and cold, but the remains of the ka-tet arrive at Le Casse Roi Russe, the Crimson King's castle. 
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 5
+                </p>
+
+                <h3 class="h3 card-title">
+                  The Last Journey
+                </h3>
+
+                <p class="card-text">
+                  A maintenance robot called Stuttering Bill brings Roland, Susannah, Patrick, and Oy to his shed from Dandelo's house. He feeds them, then the foursome moves on. When Patrick draws a portrait of Susannah, she asks him to erase the blemish on her face. When he does so, the blemish disappears from her real face as well. Haunted by dreams of Eddie and Jake, Susannah decides it is time for her to leave the quest. She asks Patrick to draw her a door. She says a tearful farewell to Roland before stepping through.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 6
+                </p>
+
+                <h3 class="h3 card-title">
+                  For the Greater Good
+                </h3>
+
+                <p class="card-text">
+                  Eddie and Susannah's sacrifices are less intentional. Eddie doesn't expect to be shot while liberating the Breakers. He has survived many other dangerous confrontations. He goes into the fray anyway because that's what has to be done. Susannah loses the love of her life, and she makes a more intentional sacrifice by choosing to go on with Roland. 
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 7
+                </p>
+
+                <h3 class="h3 card-title">
+                  The Power of Creation
+                </h3>
+
+                <p class="card-text">
+                  When they decide to save Stephen King, it is because the ka-tet has determined that many of the items that have been most helpful to them—such as the keys and the scrimshaw turtle on the vacant lot—have been dropped into the story by the writer, and they need him to keep helping them. King returns the favor with one last bit of assistance in the form of the note at Dandelo's house.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 8
+                </p>
+
+                <h3 class="h3 card-title">
+                  Last Words
+                </h3>
+
+                <p class="card-text">
+                  When Eddie, Jake, and Oy die, their last words are all about Roland. Jake and Eddie call him father, which reveals how the ka-tet is more than a group of gunslingers fighting for a common cause. They have become a family. Roland has shed the aloof exterior that marked his early days of the quest and bonded with his ka-tet as well. He finally has the love whose absence he felt so keenly on the beach in The Drawing of the Three as he watched Eddie with Susannah.
+                </p>
+              </div>
+
+            </li>
+
+            <li>
+              <div class="chapter-card">
+                <p class="card-subtitle">
+                  Chapter 9
+                </p>
+
+                <h3 class="h3 card-title">
+                  Stop the breath of the last warrior
+                </h3>
+
+                <p class="card-text">
+                  According to prophecy Mordred is destined to "stop the breath of the last warrior." Everyone presumes this refers to Roland, as he is the last gunslinger. Of course, Mordred doesn't kill Roland, but he does kill Walter. This ending could reflect the unreliability on prophecies in the face of unstoppable ka. It could also reflect how prophecies are prone to misinterpretation. Walter is a kind of warrior for the Crimson King, and at the point he is killed he is the last of his kind. More accurately he is the only one of his kind.
+                </p>
+              </div>
+
+            </li>
+
+
+
+          </ul>
+
+        </span>
+
+      </div>
+
+    </section>
+
+
     </article>
   </main>
 
