beginning + html of preview section

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
     </div>
   </section>
 
-  <!--
-    - BOOKS SECTION
-    -->
+    <!--
+      - BOOKS SECTION
+      -->
 
     <section class="section books" id="books" aria-label="books">
       
@@ -336,6 +336,11 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
     </section>
 
 
+
+      <!--
+      - LIST OF CHAPTERS SECTION
+      -->
+
     <section class="section chapters" id="chapters">
 
       <div class="container">
@@ -344,11 +349,9 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
           Chapters
         </p>
 
-
         <h2 class="h2 section-title has-underline">
-          New part of 'Dark Tower' contains these parts..
+          New part of 'Dark Tower' contains chapters
         </h2>
-
 
         <span class="span has-before">
 
@@ -507,8 +510,6 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
 
             </li>
 
-
-
           </ul>
 
         </span>
@@ -518,38 +519,85 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
     </section>
 
 
+    <!--
+      - PREVIEW SECTION
+      -->
+    <section class="section preview" aria-label="preview">
+      <div class="container">
+        <p class="section-subtitle">
+          Book Preview
+        </p>
+
+        <h2 class="h2 section-title has-underline">
+          Free prereading
+          <span class="span has-before">
+          </span>
+        </h2>
+
+        <ul class="tab-list">
+          <li>
+            <div class="tab-card active" data-tab-card>
+              <h3 class="h3 tab-text">
+                Chapter 1
+              </h3>
+
+              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 1" class="w-100">
+
+            </div>
+          </li>
+
+          <li>
+            <div class="tab-card active" data-tab-card>
+              <h3 class="h3 tab-text">
+                Chapter 2
+              </h3>
+
+              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 2" class="w-100">
+
+            </div>
+          </li>
+
+          <li>
+            <div class="tab-card active" data-tab-card>
+              <h3 class="h3 tab-text">
+                Chapter 3
+              </h3>
+
+              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 3" class="w-100">
+
+            </div>
+          </li>
+
+          <li>
+            <div class="tab-card active" data-tab-card>
+              <h3 class="h3 tab-text">
+                Chapter 4
+              </h3>
+
+              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 4" class="w-100">
+
+            </div>
+          </li>
+
+          <li>
+            <div class="tab-card active" data-tab-card>
+              <h3 class="h3 tab-text">
+                Chapter 5
+              </h3>
+
+              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 5" class="w-100">
+
+            </div>
+          </li>
+
+        </ul>
+
+      </div>
+    </section>
+
+
     </article>
   </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 </body>
