first end style of chapters preview

--- a/index.html
+++ b/index.html
@@ -541,13 +541,13 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
                 Chapter 1
               </h3>
 
-              <img src=".\assets\images\img.jpg" width="820" height="630" loading="lazy" alt="Chapter 1" class="w-100">
+              <img src=".\assets\images\img.jpg" width="420" height="330" loading="lazy" alt="Chapter 1" class="w-100">
 
             </div>
           </li>
 
           <li>
-            <div class="tab-card active" data-tab-card>
+            <div class="tab-card" data-tab-card>
               <h3 class="h3 tab-text">
                 Chapter 2
               </h3>
@@ -558,7 +558,7 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
           </li>
 
           <li>
-            <div class="tab-card active" data-tab-card>
+            <div class="tab-card" data-tab-card>
               <h3 class="h3 tab-text">
                 Chapter 3
               </h3>
@@ -569,7 +569,7 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
           </li>
 
           <li>
-            <div class="tab-card active" data-tab-card>
+            <div class="tab-card" data-tab-card>
               <h3 class="h3 tab-text">
                 Chapter 4
               </h3>
@@ -580,7 +580,7 @@ content="Discover the incredible worlds from the books of Stephen King - the rea
           </li>
 
           <li>
-            <div class="tab-card active" data-tab-card>
+            <div class="tab-card" data-tab-card>
               <h3 class="h3 tab-text">
                 Chapter 5
               </h3>
