button 'buy' style

--- a/index.html
+++ b/index.html
@@ -696,20 +696,6 @@
                       PDF and EPUB
                     </p2>
                   </li>
-
-                  <li class="card-text">
-                    <p2 class="card-text">
-                      Hardcover book
-                    </p2>
-                  </li>
-
-                  <li class="card-text">
-                    <p2 class="card-text">
-                      Access to downloads
-                    </p2>
-                  </li>
-
-
                 </ul>
                 <button class="btn btn-secondary">
                   Buy Now
@@ -779,25 +765,12 @@
 
                   <li class="card-text">
                     <p2 class="card-text">
-                      PDF and EPUB
-                    </p2>
-                  </li>
-
-                  <li class="card-text">
-                    <p2 class="card-text">
                       Hardcover book
                     </p2>
                   </li>
 
-                  <li class="card-text">
-                    <p2 class="card-text">
-                      Access to downloads
-                    </p2>
-                  </li>
-
-
                 </ul>
-                <button class="btn btn-secondary">
+                <button class="btn btn-primary">
                   Buy Now
                 </button>
               </div>
