price section is done

--- a/index.html
+++ b/index.html
@@ -679,8 +679,8 @@
                 <h3 class="h3 card-title">
                   E-Book 'Dark Tower'
                 </h3>
-                <data class="price" value="30">
-                  $5
+                <data class="price" value="9.99">
+                  $9.99
                 </data>
 
                 <ul class="pricing-card-list">
@@ -704,12 +704,12 @@
             </li>
 
             <li>
-              <div class="pricing-card">
+              <div class="pricing-card bundle">
                 <h3 class="h3 card-title">
                   Bundle
                 </h3>
                 <data class="price" value="30">
-                  $25
+                  $30
                 </data>
 
                 <ul class="pricing-card-list">
@@ -740,7 +740,7 @@
 
 
                 </ul>
-                <button class="btn btn-secondary">
+                <button class="btn btn-primary">
                   Buy Now
                 </button>
               </div>
@@ -751,8 +751,8 @@
                 <h3 class="h3 card-title">
                   Hardcover 'Dark Tower'
                 </h3>
-                <data class="price" value="30">
-                  $30
+                <data class="price" value="28">
+                  $28
                 </data>
 
                 <ul class="pricing-card-list">
@@ -770,9 +770,11 @@
                   </li>
 
                 </ul>
-                <button class="btn btn-primary">
-                  Buy Now
-                </button>
+                <a href="https://www.goodreads.com/book/show/10644930-11-22-63?ref=nav_sb_ss_1_8" class="price-link">
+                  <button class="btn btn-secondary">
+                    Buy Now
+                  </button>
+                </a>
               </div>
             </li>
 
