--- a/index.html
+++ b/index.html
@@ -659,6 +659,10 @@
         </div>
       </section>
 
+      <!--
+      - PRICING SECTION
+      -->
+
       <section class="section pricing" id="pricing" aria-label="pricing">
         <div class="container">
 
@@ -697,9 +701,11 @@
                     </p2>
                   </li>
                 </ul>
-                <button class="btn btn-secondary">
-                  Buy Now
-                </button>
+                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
+                  <button class="btn btn-secondary">
+                    Buy Now
+                  </button>
+                </a>
               </div>
             </li>
 
@@ -740,9 +746,11 @@
 
 
                 </ul>
-                <button class="btn btn-primary">
-                  Buy Now
-                </button>
+                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
+                  <button class="btn btn-primary">
+                    Buy Now
+                  </button>
+                </a>
               </div>
             </li>
 
@@ -770,7 +778,7 @@
                   </li>
 
                 </ul>
-                <a href="https://www.goodreads.com/book/show/10644930-11-22-63?ref=nav_sb_ss_1_8" class="price-link">
+                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
                   <button class="btn btn-secondary">
                     Buy Now
                   </button>
@@ -788,6 +796,38 @@
         </div>
       </section>
 
+      <!--
+      - AUTHOR SECTION
+      -->
+      <section class="section author" id="author">
+        <div class="container">
+          <figure class="author-banner img-hold" style="--width: 700;  --height: 720;">
+            <img src=".\assets\images\author-pic.jpg" width="700" height="720" loading="lazy" alt="stephen king"
+              class="img-cover">
+          </figure>
+
+          <div class="author-content">
+            <p class="section-subtitle">
+              The author
+            </p>
+
+            <h2 class="h2 section-title">
+              Stephen King
+            </h2>
+            <p class="author-name">
+              Style: Horror, Detective, Fiction, Mystery
+            </p>
+
+            <div class="section-text">
+              Stephen King was born in Portland, Maine in 1947, the second son of Donald and Nellie Ruth Pillsbury King. He made his first professional short story sale in 1967 to Startling Mystery Stories. In the fall of 1971, he began teaching high school English classes at Hampden Academy, the public high school in Hampden, Maine. Writing in the evenings and on the weekends, he continued to produce short stories and to work on novels. In the spring of 1973, Doubleday & Co., accepted the novel Carrie for publication, providing him the means to leave teaching and write full-time. He has since published over 50 books and has become one of the world's most successful writers. King is the recipient of the 2003 National Book Foundation Medal for Distinguished Contribution to the American Letters and the 2014 National Medal of Arts.
+
+              Stephen lives in Maine and Florida with his wife, novelist Tabitha King. They are regular contributors to a number of charities including many libraries and have been honored locally for their philanthropic activities.
+            </div>
+          </div>
+        </div>
+
+
+      </section>
 
 
     </article>
