author section styling

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
       -->
       <section class="section author" id="author">
         <div class="container">
-          <figure class="author-banner img-hold" style="--width: 700;  --height: 720;">
+          <figure class="author-banner img-holder" style="--width: 700;  --height: 720;">
             <img src=".\assets\images\author-pic.jpg" width="700" height="720" loading="lazy" alt="stephen king"
               class="img-cover">
           </figure>
