--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
               The author
             </p>
 
-            <h2 class="h2 section-title">
+            <h2 class="h2 section-subtitle">
               Stephen King
             </h2>
             <p class="author-name">
@@ -819,13 +819,23 @@
             </p>
 
             <div class="section-text">
-              Stephen King was born in Portland, Maine in 1947, the second son of Donald and Nellie Ruth Pillsbury King. He made his first professional short story sale in 1967 to Startling Mystery Stories. In the fall of 1971, he began teaching high school English classes at Hampden Academy, the public high school in Hampden, Maine. Writing in the evenings and on the weekends, he continued to produce short stories and to work on novels. In the spring of 1973, Doubleday & Co., accepted the novel Carrie for publication, providing him the means to leave teaching and write full-time. He has since published over 50 books and has become one of the world's most successful writers. King is the recipient of the 2003 National Book Foundation Medal for Distinguished Contribution to the American Letters and the 2014 National Medal of Arts.
-
-              Stephen lives in Maine and Florida with his wife, novelist Tabitha King. They are regular contributors to a number of charities including many libraries and have been honored locally for their philanthropic activities.
+              Stephen King was born in Portland, Maine in 1947, the second son of Donald and Nellie Ruth Pillsbury King.
+              He made his first professional short story sale in 1967 to Startling Mystery Stories. In the fall of 1971,
+              he began teaching high school English classes at Hampden Academy, the public high school in Hampden,
+              Maine.
+              <br><br>
+              Writing in the evenings and on the weekends, he continued to produce short stories and to work on
+              novels. In the spring of 1973, Doubleday & Co., accepted the novel Carrie for publication, providing him
+              the means to leave teaching and write full-time. He has since published over 50 books and has become one
+              of the world's most successful writers. King is the recipient of the 2003 National Book Foundation Medal
+              for Distinguished Contribution to the American Letters and the 2014 National Medal of Arts.
+              <br><br>
+              Stephen lives in Maine and Florida with his wife, novelist Tabitha King. They are regular contributors to
+              a number of charities including many libraries and have been honored locally for their philanthropic
+              activities.
             </div>
           </div>
         </div>
-
 
       </section>
 
