--- a/index.html
+++ b/index.html
@@ -852,11 +852,102 @@
           </h2>
 
           <ul class="grid-list">
+
             <li>
               <div class="achievement-card">
-
+                <figure class="card-banner img-holder" style="--width: 450; --height: 300;">
+                  <img src=".\assets\images\achievement-1.jpg" width="450" height="300" loading="lazy"
+                    alt="achievement-1" class="img-cover">
+                </figure>
+                <div class="card-content">
+                  <img src=".\assets\images\award.svg" width="80" height="80" loading="lazy" alt="award"
+                    class="awr-img">
+                  <h3 class="h3 card-title">
+                    Winner
+                  </h3>
+                  <p class="card-text">
+                    World Horror Convention (Grand Master Award-1992) 
+                  </p>
+                </div>
               </div>
             </li>
+
+            <li>
+              <div class="achievement-card">
+                <figure class="card-banner img-holder" style="--width: 450; --height: 300;">
+                  <img src=".\assets\images\achievement-2.jpg" width="450" height="300" loading="lazy"
+                    alt="achievement-2" class="img-cover">
+                </figure>
+                <div class="card-content">
+                  <img src=".\assets\images\award.svg" width="80" height="80" loading="lazy" alt="award"
+                    class="awr-img">
+                  <h3 class="h3 card-title">
+                    Winner
+                  </h3>
+                  <p class="card-text">
+                    Bram Stoker Award: Best Novel-1987 (Misery)
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="achievement-card">
+                <figure class="card-banner img-holder" style="--width: 450; --height: 300;">
+                  <img src=".\assets\images\achievement-3.jpg" width="450" height="300" loading="lazy"
+                    alt="achievement-3" class="img-cover">
+                </figure>
+                <div class="card-content">
+                  <img src=".\assets\images\award.svg" width="80" height="80" loading="lazy" alt="award"
+                    class="awr-img">
+                  <h3 class="h3 card-title">
+                    Nominated
+                  </h3>
+                  <p class="card-text">
+                    Bram Stoker Award: Best Novel-1994 (Insomnia)
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="achievement-card">
+                <figure class="card-banner img-holder" style="--width: 450; --height: 300;">
+                  <img src=".\assets\images\achievement-4.jpg" width="450" height="300" loading="lazy"
+                    alt="achievement-4" class="img-cover">
+                </figure>
+                <div class="card-content">
+                  <img src=".\assets\images\award.svg" width="80" height="80" loading="lazy" alt="award"
+                    class="awr-img">
+                  <h3 class="h3 card-title">
+                    Winner
+                  </h3>
+                  <p class="card-text">
+                    British Fantasy Award: 	August Derleth Award for Best Horror Novel-2005 (The Dark Tower VIII: The Dark Tower)
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <div class="achievement-card">
+                <figure class="card-banner img-holder" style="--width: 450; --height: 300;">
+                  <img src=".\assets\images\achievement-5.jpg" width="450" height="300" loading="lazy"
+                    alt="achievement-5" class="img-cover">
+                </figure>
+                <div class="card-content">
+                  <img src=".\assets\images\award.svg" width="80" height="80" loading="lazy" alt="award"
+                    class="awr-img">
+                  <h3 class="h3 card-title">
+                    Winner
+                  </h3>
+                  <p class="card-text">
+                    Colorado Blue Spruce Young Adult Book Award: 	Best Collection-1991 (Pet Sematary)
+                  </p>
+                </div>
+              </div>
+            </li>
+
           </ul>
 
         </div>
