achienements style is done

--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
 
       </section>
 
-      <section class="section achievement" id="achievement" aria-label="achievement">
+      <section class="section achievement" id="achievements" aria-label="achievement">
         <div class="container">
           <p class="section-subtitle">
             Achievements
