html code for contact us is done

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
     <article>
 
       <!--
-    - HOME SECTION
-    -->
-
+      - HOME SECTION
+      -->
       <section class="section hero" id="home" aria-label="home">
         <div class="container">
           <div class="hero-content">
@@ -143,10 +142,10 @@
         </div>
       </section>
 
+
       <!--
       - BOOKS SECTION
       -->
-
       <section class="section books" id="books" aria-label="books">
 
         <div class="container">
@@ -351,14 +350,12 @@
           </div>
 
         </div>
-
       </section>
 
 
       <!--
       - LIST OF CHAPTERS SECTION
       -->
-
       <section class="section chapters" id="chapters">
 
         <div class="container">
@@ -659,10 +656,10 @@
         </div>
       </section>
 
+
       <!--
       - PRICING SECTION
       -->
-
       <section class="section pricing" id="pricing" aria-label="pricing">
         <div class="container">
 
@@ -796,6 +793,7 @@
         </div>
       </section>
 
+
       <!--
       - AUTHOR SECTION
       -->
@@ -839,6 +837,10 @@
 
       </section>
 
+
+      <!--
+      - ACHIEVEMENTS SECTION
+      -->
       <section class="section achievement" id="achievements" aria-label="achievement">
         <div class="container">
           <p class="section-subtitle">
@@ -866,7 +868,7 @@
                     Winner
                   </h3>
                   <p class="card-text">
-                    World Horror Convention (Grand Master Award-1992) 
+                    World Horror Convention (Grand Master Award-1992)
                   </p>
                 </div>
               </div>
@@ -923,7 +925,8 @@
                     Winner
                   </h3>
                   <p class="card-text">
-                    British Fantasy Award: 	August Derleth Award for Best Horror Novel-2005 (The Dark Tower VIII: The Dark Tower)
+                    British Fantasy Award: August Derleth Award for Best Horror Novel-2005 (The Dark Tower VIII: The
+                    Dark Tower)
                   </p>
                 </div>
               </div>
@@ -942,7 +945,7 @@
                     Winner
                   </h3>
                   <p class="card-text">
-                    Colorado Blue Spruce Young Adult Book Award: 	Best Collection-1991 (Pet Sematary)
+                    Colorado Blue Spruce Young Adult Book Award: Best Collection-1991 (Pet Sematary)
                   </p>
                 </div>
               </div>
@@ -952,6 +955,133 @@
 
         </div>
       </section>
+
+
+      <!--
+      - FEEDBACK SECTION
+      -->
+      <section class="section contact" id="contact" aria-label="contact">
+        <div class="container">
+          <p class="section-subtitle">
+            Contact
+          </p>
+
+          <h2 class="h2 section-title has-underline">
+            Write us your feedback
+            <span class="span has-before">
+            </span>
+          </h2>
+
+          <div class="wrapper">
+            <form action="" class="contact-form">
+              <input type="text" name="name" placeholder="Your Name" required class="text input-field">
+              <input type="email" name="email_address" placeholder="Your Email" required class="input-field">
+              <input type="text" name="subject" placeholder="Subject" required class="input-field">
+              <textarea name="message" placeholder="Your Message" required id="" cols="30" rows="10"
+                class="input-field">
+          </textarea>
+              <button type="submit" class="btn btn-primary">
+                Send
+              </button>
+            </form>
+
+            <ul class="contact-card">
+              <li>
+                <p class="card-title">
+                  Address:
+
+                <address class="address">
+                  1380 Hammond Street
+                  <br>
+                  Bangor, ME USA 04401
+
+                </address>
+                </p>
+
+              </li>
+
+              <li>
+                <p class="card-title">
+                  Phone:
+                </p>
+
+                <a href="tel: 17162505700" class="card-link">
+                  1-716-250-5700
+                </a>
+              </li>
+
+              <li>
+                <p class="card-title">
+                  Email:
+                </p>
+
+                <a href="mailto: member.services@stephenkinglibrary.com" class="card-link">
+                  member.services@stephenkinglibrary.com
+                </a>
+              </li>
+
+              <li>
+                <p class="h3 social-list-title">
+                  Socials
+                </p>
+
+                <ul class="social-list">
+
+                  <li>
+
+                    <a href="https://www.facebook.com/groups/161286260931357/" class="social-link">
+                      <ion-icon name="logo-facebook"></ion-icon>
+                    </a>
+
+                  </li>
+
+                  <li>
+
+                    <a href="https://twitter.com/stephenking" class="social-link">
+                      <ion-icon name="logo-twitter"></ion-icon>
+                    </a>
+
+                  </li>
+
+                  <li>
+
+                    <a href="https://youtube.com/@stephenking" class="social-link">
+                      <ion-icon name="logo-youtube"></ion-icon>
+                    </a>
+
+                  </li>
+
+                  <li>
+
+                    <a href="https://www.instagram.com/prof_ikni/" class="social-link">
+                      <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+
+                  </li>
+
+                </ul>
+
+              </li>
+
+
+
+
+            </ul>
+
+
+
+
+
+
+
+          </div>
+        </div>
+      </section>
+
+
+
+
+
 
     </article>
   </main>
