style of contact us section is over

--- a/index.html
+++ b/index.html
@@ -979,10 +979,13 @@
               <input type="text" name="subject" placeholder="Subject" required class="input-field">
               <textarea name="message" placeholder="Your Message" required id="" cols="30" rows="10"
                 class="input-field">
-          </textarea>
-              <button type="submit" class="btn btn-primary">
+              </textarea>
+              <div class="container-button-submit">
+                <button type="submit" class="btn btn-primary">
                 Send
               </button>
+              </div>
+              
             </form>
 
             <ul class="contact-card">
@@ -1021,9 +1024,11 @@
               </li>
 
               <li>
-                <p class="h3 social-list-title">
-                  Socials
-                </p>
+                <div class="container-social-list-title">
+                  <p class="social-list-title h3">
+                    Socials
+                  </p>
+                </div>
 
                 <ul class="social-list">
 
@@ -1062,10 +1067,6 @@
                 </ul>
 
               </li>
-
-
-
-
             </ul>
 
 
