footer and credits are done. refactor for big screen is needed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 
 
 
-
   <!-- 
     -- js link
   -->
@@ -100,7 +99,6 @@
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <link rel="preload" as="image" href=".\assets\images\home-pic-dark-towel.jpg">
-
 
 
 
@@ -180,12 +178,11 @@
                   off-season, a chilling winter storm confines Jack to the hotel — and sinister forces begin to emerge.
                 </p>
 
-                <a href="https://www.goodreads.com/book/show/11588.The_Shining" class="btn-link">
+                <a href="https://www.goodreads.com/book/show/11588.The_Shining" target="_blank" class="btn-link">
                   <span class="span">
                     Read more
                   </span>
                   <ion-icon name="chevron-forward-outline" aria-hidden="true">
-
                   </ion-icon>
                 </a>
 
@@ -211,12 +208,11 @@
                 </p>
 
                 <a href="https://www.goodreads.com/book/show/830502.It?from_search=true&from_srp=true&qid=ZhutxpeyGV&rank=3"
-                  class="btn-link">
+                  target="_blank" class="btn-link">
                   <span class="span">
                     Read more
                   </span>
                   <ion-icon name="chevron-forward-outline" aria-hidden="true">
-
                   </ion-icon>
                 </a>
 
@@ -243,12 +239,12 @@
                   manipulation, and addiction.
                 </p>
 
-                <a href="https://www.goodreads.com/book/show/10614.Misery?ref=nav_sb_ss_1_6" class="btn-link">
+                <a href="https://www.goodreads.com/book/show/10614.Misery?ref=nav_sb_ss_1_6" target="_blank"
+                  class="btn-link">
                   <span class="span">
                     Read more
                   </span>
                   <ion-icon name="chevron-forward-outline" aria-hidden="true">
-
                   </ion-icon>
                 </a>
 
@@ -273,12 +269,12 @@
                   terrifying prom night scene.
                 </p>
 
-                <a href="https://www.goodreads.com/book/show/10592.Carrie?ref=nav_sb_ss_2_6" class="btn-link">
+                <a href="https://www.goodreads.com/book/show/10592.Carrie?ref=nav_sb_ss_2_6" target="_blank"
+                  class="btn-link">
                   <span class="span">
                     Read more
                   </span>
                   <ion-icon name="chevron-forward-outline" aria-hidden="true">
-
                   </ion-icon>
                 </a>
 
@@ -303,12 +299,12 @@
                   order.
                 </p>
 
-                <a href="https://www.goodreads.com/book/show/43615.The_Gunslinger?ref=nav_sb_ss_1_14" class="btn-link">
+                <a href="https://www.goodreads.com/book/show/43615.The_Gunslinger?ref=nav_sb_ss_1_14" target="_blank"
+                  class="btn-link">
                   <span class="span">
                     Read more
                   </span>
                   <ion-icon name="chevron-forward-outline" aria-hidden="true">
-
                   </ion-icon>
                 </a>
 
@@ -334,7 +330,8 @@
                   if he's to succeed.
                 </p>
 
-                <a href="https://www.goodreads.com/book/show/10644930-11-22-63?ref=nav_sb_ss_1_8" class="btn-link">
+                <a href="https://www.goodreads.com/book/show/10644930-11-22-63?ref=nav_sb_ss_1_8" target="_blank"
+                  class="btn-link">
                   <span class="span">
                     Read more
                   </span>
@@ -698,7 +695,7 @@
                     </p2>
                   </li>
                 </ul>
-                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
+                <a href="https://stephenking.com/DarkTower/book/" target="_blank" class="price-link">
                   <button class="btn btn-secondary">
                     Buy Now
                   </button>
@@ -743,7 +740,7 @@
 
 
                 </ul>
-                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
+                <a href="https://stephenking.com/DarkTower/book/" target="_blank" class="price-link">
                   <button class="btn btn-primary">
                     Buy Now
                   </button>
@@ -775,7 +772,7 @@
                   </li>
 
                 </ul>
-                <a href="https://stephenking.com/DarkTower/book/" class="price-link">
+                <a href="https://stephenking.com/DarkTower/book/" target="_blank" class="price-link">
                   <button class="btn btn-secondary">
                     Buy Now
                   </button>
@@ -982,10 +979,10 @@
               </textarea>
               <div class="container-button-submit">
                 <button type="submit" class="btn btn-primary">
-                Send
-              </button>
+                  Send
+                </button>
               </div>
-              
+
             </form>
 
             <ul class="contact-card">
@@ -1034,7 +1031,7 @@
 
                   <li>
 
-                    <a href="https://www.facebook.com/groups/161286260931357/" class="social-link">
+                    <a href="https://www.facebook.com/groups/161286260931357/" target="_blank" class="social-link">
                       <ion-icon name="logo-facebook"></ion-icon>
                     </a>
 
@@ -1042,7 +1039,7 @@
 
                   <li>
 
-                    <a href="https://twitter.com/stephenking" class="social-link">
+                    <a href="https://twitter.com/stephenking" target="_blank" class="social-link">
                       <ion-icon name="logo-twitter"></ion-icon>
                     </a>
 
@@ -1050,7 +1047,7 @@
 
                   <li>
 
-                    <a href="https://youtube.com/@stephenking" class="social-link">
+                    <a href="https://youtube.com/@stephenking" target="_blank" class="social-link">
                       <ion-icon name="logo-youtube"></ion-icon>
                     </a>
 
@@ -1058,7 +1055,7 @@
 
                   <li>
 
-                    <a href="https://www.instagram.com/prof_ikni/" class="social-link">
+                    <a href="https://www.instagram.com/prof_ikni/" target="_blank" class="social-link">
                       <ion-icon name="logo-instagram"></ion-icon>
                     </a>
 
@@ -1069,19 +1066,66 @@
               </li>
             </ul>
 
-
-
-
-
-
-
           </div>
         </div>
       </section>
 
 
+      <!--
+      - FOOTER SECTION
+      -->
+      <footer class="footer">
+        <div class="container">
 
+          <div class="footer-top">
 
+            <a href="#" class="logo">
+              Stephen King
+            </a>
+
+            <ul class="footer-list">
+
+              <li>
+                <a href="#home" class="footer-link">Home</a>
+              </li>
+
+              <li>
+                <a href="#books" class="footer-link">Books</a>
+              </li>
+
+              <li>
+                <a href="#chapters" class="footer-link">Chapters</a>
+              </li>
+
+              <li>
+                <a href="#pricing" class="footer-link">Pricing</a>
+              </li>
+
+              <li>
+                <a href="#author" class="footer-link">Author</a>
+              </li>
+
+              <li>
+                <a href="#achievements" class="footer-link">Achievements</a>
+              </li>
+
+              <li>
+                <a href="#contact" class="footer-link">Contact</a>
+              </li>
+
+            </ul>
+          </div>
+
+          <div class="footer-bottom">
+            <p class="copyright">
+              &copy; 2023 All right reserved. <a href="https://www.instagram.com/a.hileta" target="_blank"
+                class="credits-link">Made by Anastasiia Hileta.</a>
+            </p>
+          </div>
+
+        </div>
+
+      </footer>
 
 
     </article>
