style for differn screen sizes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="hero-content">
 
             <p class="section-subtitle">
-              THE FAN SITE OF STEPHEN KING LITERARY ESTATE
+              THE SITE OF STEPHEN KING LITERARY ESTATE
             </p>
 
             <h1 class="h1 hero-title">
@@ -121,13 +121,11 @@
             </h1>
 
             <p class="section-text">
-              Stephen Edwin King described as the "King of Horror", a play on his surname and a reference to his high
-              standing in pop culture, his books have sold more than 350 million copies as of 2006, and many have been
-              adapted into films, television series, miniseries, and comic books
+              Stephen Edwin King described as the "King of Horror"
             </p>
 
             <div class="hero-banner has-before">
-              <img src=".\assets\images\home-pic-dark-towel.jpg" width="431" height="596"
+              <img src=".\assets\images\home-pic-dark-towel.jpg" width="250" height="346"
                 alt="dark tower 8 by stephen king" class="w-100">
             </div>
 
