--- a/index.html
+++ b/index.html
@@ -910,12 +910,17 @@
 
           <div class="wrapper">
             <form action="" class="contact-form">
-              <input type="text" name="name" placeholder="Your Name" required class="text input-field">
-              <input type="email" name="email_address" placeholder="Your Email" required class="input-field">
-              <input type="text" name="subject" placeholder="Subject" required class="input-field">
+
+              <input type="text" name="name" placeholder="Your Name" required id="" class="text input-field">
+
+              <input type="email" name="email_address" placeholder="Your Email" required id="" class="input-field">
+
+              <input type="text" name="subject" placeholder="Subject" required id="" class="input-field">
+
               <textarea name="message" placeholder="Your Message" required id="" cols="30" rows="10"
                 class="input-field">
               </textarea>
+
               <div class="container-button-submit">
                 <button type="submit" class="btn btn-primary">
                   Send
