add reading chapters data from json

--- a/index.html
+++ b/index.html
@@ -364,7 +364,9 @@
             <span class="span has-before"></span>
           </h2>
 
-          <ul class="grid-list">
+          <ul class="grid-list" id="chapters_section">
+<!--
+
 
             <li>
               <div class="chapter-card">
@@ -507,7 +509,7 @@
               </div>
 
             </li>
-
+-->
 
           </ul>
 
