add reading books data from json

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
         <div class="container">
 
-          <div class="grid-list">
+          <div class="grid-list" id="books_section">
 
             <li class="books-content">
               <h2 class="h2 section-title">
@@ -155,11 +155,12 @@
             </li>
 
 
+<!--
+
             <li>
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-1.svg" width="40" height="40" loading="lazy" alt="The Shining">
                 </div>
 
@@ -189,7 +190,6 @@
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-2.svg" width="40" height="40" loading="lazy" alt="It">
                 </div>
 
@@ -220,7 +220,6 @@
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-3.svg" width="40" height="40" loading="lazy" alt="Misery">
                 </div>
 
@@ -252,7 +251,6 @@
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-4.svg" width="40" height="40" loading="lazy" alt="Carrie">
                 </div>
 
@@ -283,7 +281,6 @@
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-5.svg" width="40" height="40" loading="lazy" alt="The Gunslinger">
                 </div>
 
@@ -314,7 +311,6 @@
               <div class="books-card has-before has-after">
 
                 <div class="card-icon">
-                  <!-- цю картинку можна завантажувати затримкою -->
                   <img src=".\assets\images\books-6.svg" width="40" height="40" loading="lazy" alt="11/22/63">
                 </div>
 
@@ -340,6 +336,7 @@
               </div>
 
             </li>
+-->
 
           </div>
 
