--- a/index.html
+++ b/index.html
@@ -737,7 +737,9 @@
             <span class="span has-before"></span>
           </h2>
 
-          <ul class="grid-list">
+          <ul class="grid-list" id="achievements_section">
+
+<!-- 
 
             <li>
               <div class="achievement-card">
@@ -882,6 +884,8 @@
 
               </div>
             </li>
+              
+-->
 
           </ul>
 
