when button 'sen feedback' is clicked. it dessapears

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
               </textarea>
 
               <div class="container-button-submit">
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary" id="send-feedback">
                   Send
                 </button>
               </div>
