--- a/index.html
+++ b/index.html
@@ -912,15 +912,15 @@
           </h2>
 
           <div class="wrapper">
-            <form action="" class="contact-form">
+            <form action="" class="contact-form" id="contact-form">
 
-              <input type="text" name="name" placeholder="Your Name" required id="" class="text input-field">
+              <input type="text" name="name" placeholder="Your Name" required id="name-input" class="text input-field">
 
-              <input type="email" name="email_address" placeholder="Your Email" required id="" class="input-field">
+              <input type="email" name="email_address" placeholder="Your Email" required id="email-input" class="input-field">
 
-              <input type="text" name="subject" placeholder="Subject" required id="" class="input-field">
+              <input type="text" name="subject" placeholder="Subject" required id="subject-input" class="input-field">
 
-              <textarea name="message" placeholder="Your Message" required id="" cols="30" rows="10"
+              <textarea name="message" placeholder="Your Message" required id="message-input" cols="30" rows="10"
                 class="input-field">
               </textarea>
 
